# python

./: .gitignore  README.md  mail.py  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt
.aws/: config
.devcontainer/: Dockerfile  aws_temp_crendentials.sh  devcontainer.json  setup.sh  vscode_settings.sh
arquivos_e_graficos/: arquivos.py  exemplo_bokeh.py  exemplo_seaborn.py  gerar_frames_animated_graph.py  gerar_grafico.py  grafico_com_subplots.py  multiplos_graficos.py  plot_graph_from_CSV.py
arquivos_texto/: 10000amostras.csv  1000amostras.csv  100amostras.csv  13amostras.csv  robusto_reoa.csv
banco_de_dados/: acessar_sqlite.py  escola.db  exemplo_mongodb.py
cache/: examples.py
classes/: dataclass_decorator.py
concurreny/: README.md  api.py  async_http_calls.py  example.py  mp_example.py  my_api.py  threading_example.py
datascience_libs/lib_dask/: main.py
datascience_libs/lib_duckdb/: in_memory.py  local_file.py  read_csv.py  read_parquet.py
datascience_libs/lib_folium/: mapas_com_folium.py
datascience_libs/lib_numpy/: numpy_alguns_exemplos.py  visualizar_dados_em_graficos.py
datascience_libs/lib_pandas/: operacoes_basicas_DataFrame.py  pandas_dataframe.py
datascience_libs/lib_sklearn/: diabetes_com_knn.py  iris_com_knn.py  linear_regression.py  titanic_com_knn.py
estruturas_de_dados_basicas/: dictionary.py  indices.py  lista_encadeada.py  listas.py  matriz.py  sets.py  tuplas.py
excecoes/: exemplo_excecao.py
injecao _de_dependencias/: email_client.py  email_reader.py
instrumentation/: OpenTelemetry.md  README.md
instrumentation/fastapi/: Dockerfile.auto_otel  auto_otel_app.py  client.py  docker-compose.yaml  otel-collector-config.yaml
lacos_funcoes_recursos_etc/: char_to_int.py  comandos_sistema.py  for.py  function.py  import.py  lib_datetime.py  listComprehension.py  message.py  modulos.py  processos.py  switch.py  while.py
lib_folium/: mapas_com_folium.py
lib_numpy/: numpy_alguns_exemplos.py  visualizar_dados_em_graficos.py
lib_pandas/: operacoes_basicas_DataFrame.py  pandas_dataframe.py
lib_sklearn/: diabetes_com_knn.py  iris_com_knn.py  linear_regression.py  titanic_com_knn.py
logger/: README.md
logger/advanced/: filters.py  formatter.py  log_config.yaml  logger.py  main.py
logger/default_logging/advanced/: filters.py  formatter.py  log_config.yaml  logger.py  main.py
logger/default_logging/simple/: logger.py  main.py
logger/loguru_logging/: main.py  my_logger.py
logger/simple/: logger.py  main.py  script_logger.py
metaclasses/: README.md
poo/: classe.py  encapsulamento.py  static_method.py
profiling/: cpu_profiling.py  mem_example.py
py_async/: example.py
python-basics/arquivos_e_graficos/: arquivos.py  exemplo_bokeh.py  exemplo_seaborn.py  gerar_frames_animated_graph.py  grafico_com_subplots.py  multiplos_graficos.py  plot_graph_from_CSV.py
python-basics/arquivos_texto/: 500amostras.csv  semperda.csv
python-basics/banco_de_dados/: acessar_sqlite.py  exemplo_mongodb.py
python-basics/estruturas_de_dados_basicas/: binary_search.py  counter.py  dictionary.py  linked_list.py  lista_encadeada.py  listas.py  matriz.py  queues.py  tree.py
python-basics/excecoes/: exemplo_excecao.py
python-basics/lacos_funcoes_recursos_etc/: for.py  function.py  import.py  lib_datetime.py  processos.py  switch.py  while.py
