[tool.poetry]
name = "python snippets"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.2.0"
dependency-injector = "^4.41.0"
folium = "^0.14.0"
matplotlib = "^3.7.2"
pydataset = "^0.2.0"
pymongo = "^4.4.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
dask = "^2023.7.0"
fastparquet = "^2023.7.0"
line-profiler = "^4.1.1"
pycallgraph2 = "^1.1.3"
memray = "^1.9.1"
uvicorn = "^0.24.0.post1"
httpx = {extras = ["http2"], version = "^0.25.2"}
aiohttp = "^3.9.0"
fastapi = "^0.109.2"
duckdb = "^0.10.0"
pyarrow = "^15.0.0"
polars = "^0.20.8"

[tool.poetry.group.dev.dependencies]
mypy = "^0.960"
black = "^24.4.2"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = "node_modules"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88
extend_skip = []

[tool.mypy]
exclude = [ ".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
